--- a/package.json
+++ b/package.json
@@ -67,5 +67,6 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
-  }
+  },
+  "start": "ng serve --proxy-config proxy.conf.json"
 }
