--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^7.2.10",
     "@angular/platform-browser-dynamic": "^7.2.10",
     "@angular/router": "^7.2.10",
+    "@ng-select/ng-select": "^2.19.0",
     "angular-froala-wysiwyg": "^2.9.3",
     "animate.css": "^3.5.2",
     "bootstrap": "^3.3.7",
